Downloads/2025ccp1-team33-main/test/parser/bad/a_bad_else.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

else:
    print("else_OK")

print("after_else_OK")